tests/invalid/range_restrict.err_exp
range_restrict.m:015: In instance for typeclass `foo'/2:
range_restrict.m:015:   error: functional dependency not satisfied: type
range_restrict.m:015:   variables [38;5;87m`Y'[39;49m and [38;5;87m`Z'[39;49m occur in the range of the
range_restrict.m:015:   functional dependency, but [38;5;203mare not determined by the[39;49m
range_restrict.m:015:   [38;5;203mdomain.[39;49m
